Reorganize launcher into a list view
This replaces the hardcoded icons with a list view, and replaces the
link to the settings view with a mode that simply unlocks access to
all of the applications on the device.

Fix: https://github.com/AULFA/launcher/issues/2
Fix: https://github.com/AULFA/launcher/issues/1

--- a/au.org.libraryforall.launcher.app/build.gradle
+++ b/au.org.libraryforall.launcher.app/build.gradle
@@ -1,8 +1,36 @@
 dependencies {
+  implementation project(":au.org.libraryforall.launcher.installed")
+  implementation project(":au.org.libraryforall.launcher.installed.api")
+
+  implementation libraries.androidMaterial
+  implementation libraries.androidXActivity
+  implementation libraries.androidXAppCompat
+  implementation libraries.androidXCore
+  implementation libraries.androidXConstraintLayout
+  implementation libraries.conductor
+  implementation libraries.googleGuava
   implementation libraries.kotlinStdlib
   implementation libraries.rXJava
-  implementation libraries.androidXAppCompat
-  implementation libraries.androidXActivity
-  implementation libraries.androidXCore
-  implementation libraries.androidMaterial
+  implementation libraries.slf4j
+}
+
+def loadPassword(project) {
+  def propsFile = file("password.properties").absoluteFile
+  def Properties props = new Properties()
+
+  if (propsFile.canRead()) {
+    props.load(new FileInputStream(propsFile))
+    return props['password']
+  } else {
+    throw new FileNotFoundException("Could not read ${propsFile}")
+  }
+}
+
+android {
+
+  def password = loadPassword()
+
+  defaultConfig {
+    buildConfigField "String", "SETTINGS_PASSWORD", "\"${password}\""
+  }
 }
