--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,3 @@
 include ':au.org.libraryforall.launcher.app'
+include ':au.org.libraryforall.launcher.installed.api'
+include ':au.org.libraryforall.launcher.installed'
