--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ buildscript {
   }
 
   dependencies {
-    classpath "com.android.tools.build:gradle:3.4.0"
+    classpath 'com.android.tools.build:gradle:3.4.1'
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     classpath "digital.wup:android-maven-publish:3.6.2"
     classpath "io.codearte.gradle.nexus:gradle-nexus-staging-plugin:0.20.0"
@@ -22,17 +22,17 @@ buildscript {
 }
 
 plugins {
-  id "ru.vyarus.animalsniffer"             version "1.5.0"
-  id "io.codearte.nexus-staging"           version "0.20.0"
+  id "ru.vyarus.animalsniffer" version "1.5.0"
+  id "io.codearte.nexus-staging" version "0.20.0"
   id "com.vanniktech.android.junit.jacoco" version "0.13.0"
-  id "digital.wup.android-maven-publish"   version "3.6.2"
+  id "digital.wup.android-maven-publish" version "3.6.2"
 }
 
 ext {
   androidBuildToolsVersion = "28.0.3"
   androidCompileSDKVersion = 28
   androidMinimumSDKVersion = 21
-  androidTargetSDKVersion  = 28
+  androidTargetSDKVersion = 28
 
   if (!project.hasProperty("nexusUsername")) {
     logger.warn("No nexusUsername property specified: Using an empty value")
@@ -45,35 +45,38 @@ ext {
 }
 
 ext.libraries = [
-  kotlinReflect:             "org.jetbrains.kotlin:kotlin-reflect:1.3.21",
-  kotlinStdlib:              "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version",
-  jUnit:                     "junit:junit:4.12",
-  androidSupportTestRules:   "com.android.support.test:rules:1.0.2",
-  androidSupportTestRunner:  "com.android.support.test:runner:1.0.2",
-  androidTestOrchestrator:   "com.android.support.test:orchestrator:1.0.2",
-  jodaTime:                  "joda-time:joda-time:2.10.1",
-  googleGuava:               "com.google.guava:guava:27.1-android",
-  sLF4J:                     "org.slf4j:slf4j-api:1.8.0-beta4",
-  logback:                   "ch.qos.logback:logback-classic:1.3.0-alpha4",
-  jackson:                   "com.fasterxml.jackson.core:jackson-core:2.9.8",
-  androidXAppCompat:         "androidx.appcompat:appcompat:1.1.0-alpha03",
-  androidXActivity:          "androidx.activity:activity-ktx:1.0.0-alpha05",
-  androidXCore:              "androidx.core:core-ktx:1.0.1",
-  androidMaterial:           "com.google.android.material:material:1.0.0",
-  rXJava:                    "io.reactivex.rxjava2:rxjava:2.2.8",
+  androidMaterial         : "com.google.android.material:material:1.0.0",
+  androidSupportTestRules : "com.android.support.test:rules:1.0.2",
+  androidSupportTestRunner: "com.android.support.test:runner:1.0.2",
+  androidTestOrchestrator : "com.android.support.test:orchestrator:1.0.2",
+  androidXActivity        : "androidx.activity:activity-ktx:1.0.0-alpha05",
+  androidXAppCompat       : "androidx.appcompat:appcompat:1.1.0-alpha03",
+  androidXCore            : "androidx.core:core-ktx:1.0.1",
+  androidXConstraintLayout: "androidx.constraintlayout:constraintlayout:1.1.3",
+  conductor               : "com.bluelinelabs:conductor:3.0.0-rc1",
+  googleGuava             : "com.google.guava:guava:27.1-android",
+  picasso                 : "com.squareup.picasso:picasso:2.71828",
+  jUnit                   : "junit:junit:4.12",
+  jackson                 : "com.fasterxml.jackson.core:jackson-core:2.9.8",
+  jodaTime                : "joda-time:joda-time:2.10.1",
+  kotlinReflect           : "org.jetbrains.kotlin:kotlin-reflect:1.3.21",
+  kotlinStdlib            : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version",
+  logback                 : "ch.qos.logback:logback-classic:1.3.0-alpha4",
+  rXJava                  : "io.reactivex.rxjava2:rxjava:2.2.8",
+  slf4j                   : "org.slf4j:slf4j-api:1.8.0-beta4",
 ]
 
 apply plugin: "io.codearte.nexus-staging"
 apply plugin: "com.vanniktech.android.junit.jacoco"
 
 nexusStaging {
-  packageGroup                = "au.org.libraryforall"
-  numberOfRetries             = 32
+  packageGroup = "au.org.libraryforall"
+  numberOfRetries = 32
   delayBetweenRetriesInMillis = 2000
 }
 
 allprojects {
-  group   = project.ext["GROUP"]
+  group = project.ext["GROUP"]
   version = project.ext["VERSION_NAME"]
 }
 
@@ -221,31 +224,31 @@ Automatic-Module-Name: ${POM_AUTOMATIC_MODULE_NAME}
         artifact javadocsJar
 
         pom {
-          artifactId  = POM_ARTIFACT_ID
-          name        = POM_NAME
-          packaging   = POM_PACKAGING
+          artifactId = POM_ARTIFACT_ID
+          name = POM_NAME
+          packaging = POM_PACKAGING
           description = POM_DESCRIPTION
-          url         = POM_URL
+          url = POM_URL
 
           scm {
-            connection          = POM_SCM_CONNECTION
+            connection = POM_SCM_CONNECTION
             developerConnection = POM_SCM_DEV_CONNECTION
-            url                 = POM_SCM_URL
+            url = POM_SCM_URL
           }
 
           licenses {
             license {
               name = POM_LICENCE_NAME
-              url  = POM_LICENCE_URL
+              url = POM_LICENCE_URL
             }
           }
 
           developers {
             developer {
-              id    = POM_DEVELOPER_ID
-              name  = POM_DEVELOPER_NAME
+              id = POM_DEVELOPER_ID
+              name = POM_DEVELOPER_NAME
               email = POM_DEVELOPER_EMAIL
-              url   = POM_DEVELOPER_URL
+              url = POM_DEVELOPER_URL
             }
           }
         }
