--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@ POM_SCM_CONNECTION=scm:git:git://github.com/AULFA/launcher.git
 POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com/AULFA/launcher.git
 POM_SCM_URL=http://github.com/AULFA/launcher/
 POM_URL=http://github.com/AULFA/launcher/
-VERSION_NAME=0.0.1-SNAPSHOT
+VERSION_NAME=0.0.2
 
 android.useAndroidX=true
 android.enableJetifier=true
