Make and publish signed release builds in Travis

--- a/au.org.libraryforall.launcher.app/build.gradle
+++ b/au.org.libraryforall.launcher.app/build.gradle
@@ -30,6 +30,30 @@ android {
 
   def password = loadPassword()
 
+  signingConfigs {
+    debug {
+      keyAlias findProperty("au.org.libraryforall.keyAlias")
+      keyPassword findProperty("au.org.libraryforall.keyPassword")
+      storeFile file("${project.rootDir}/lfa-keystore.jks")
+      storePassword findProperty("au.org.libraryforall.storePassword")
+    }
+    release {
+      keyAlias findProperty("au.org.libraryforall.keyAlias")
+      keyPassword findProperty("au.org.libraryforall.keyPassword")
+      storeFile file("${project.rootDir}/lfa-keystore.jks")
+      storePassword findProperty("au.org.libraryforall.storePassword")
+    }
+  }
+
+  buildTypes {
+    debug {
+      signingConfig signingConfigs.debug
+    }
+    release {
+      signingConfig signingConfigs.release
+    }
+  }
+
   defaultConfig {
     buildConfigField "String", "SETTINGS_PASSWORD", "\"${password}\""
   }
