Split launcher into AAR
This moves the core of the launcher into an AAR file. This allows
for creating separate frontends in a similar style to the main LFA app.

--- a/au.org.libraryforall.launcher.app/src/main/AndroidManifest.xml
+++ b/au.org.libraryforall.launcher.app/src/main/AndroidManifest.xml
@@ -6,9 +6,9 @@
   <application
     android:label="@string/launcherAppName"
     android:icon="@mipmap/ic_launcher"
-    android:name="au.org.libraryforall.launcher.app.LauncherApplication">
+    android:name="au.org.libraryforall.launcher.main.LauncherApplication">
     <activity
-      android:name="au.org.libraryforall.launcher.app.LauncherActivity"
+      android:name="au.org.libraryforall.launcher.main.LauncherActivity"
       android:exported="true"
       android:theme="@style/LauncherTheme">
       <intent-filter>
