--- a/au.org.libraryforall.launcher.app/build.gradle
+++ b/au.org.libraryforall.launcher.app/build.gradle
@@ -1,60 +1,3 @@
 dependencies {
-  implementation project(":au.org.libraryforall.launcher.installed")
-  implementation project(":au.org.libraryforall.launcher.installed.api")
-
-  implementation libraries.androidMaterial
-  implementation libraries.androidXActivity
-  implementation libraries.androidXAppCompat
-  implementation libraries.androidXCore
-  implementation libraries.androidXConstraintLayout
-  implementation libraries.conductor
-  implementation libraries.googleGuava
-  implementation libraries.kotlinStdlib
-  implementation libraries.rXJava
-  implementation libraries.slf4j
-}
-
-def loadPassword(project) {
-  def propsFile = file("password.properties").absoluteFile
-  def Properties props = new Properties()
-
-  if (propsFile.canRead()) {
-    props.load(new FileInputStream(propsFile))
-    return props['password']
-  } else {
-    throw new FileNotFoundException("Could not read ${propsFile}")
-  }
-}
-
-android {
-
-  def password = loadPassword()
-
-  signingConfigs {
-    debug {
-      keyAlias findProperty("au.org.libraryforall.keyAlias")
-      keyPassword findProperty("au.org.libraryforall.keyPassword")
-      storeFile file("${project.rootDir}/lfa-keystore.jks")
-      storePassword findProperty("au.org.libraryforall.storePassword")
-    }
-    release {
-      keyAlias findProperty("au.org.libraryforall.keyAlias")
-      keyPassword findProperty("au.org.libraryforall.keyPassword")
-      storeFile file("${project.rootDir}/lfa-keystore.jks")
-      storePassword findProperty("au.org.libraryforall.storePassword")
-    }
-  }
-
-  buildTypes {
-    debug {
-      signingConfig signingConfigs.debug
-    }
-    release {
-      signingConfig signingConfigs.release
-    }
-  }
-
-  defaultConfig {
-    buildConfigField "String", "SETTINGS_PASSWORD", "\"${password}\""
-  }
+  api project(":au.org.libraryforall.launcher.main")
 }
