Add Inclusiv frontend

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,5 @@
 include ':au.org.libraryforall.launcher.app'
+include ':au.org.libraryforall.launcher.inclusiv'
 include ':au.org.libraryforall.launcher.installed'
 include ':au.org.libraryforall.launcher.installed.api'
 include ':au.org.libraryforall.launcher.main'
