Upgrade Gradle and plugins, use new CI configuration

--- a/au.org.libraryforall.launcher.main/build.gradle
+++ b/au.org.libraryforall.launcher.main/build.gradle
@@ -56,5 +56,7 @@ android {
 
   defaultConfig {
     buildConfigField "String", "SETTINGS_PASSWORD", "\"${password}\""
+    buildConfigField "String", "VERSION_NAME", "\"${versionName}\""
+    buildConfigField "int", "VERSION_CODE", "${versionCode}"
   }
 }
