Add the Inclusive Launchers to the CI deploy list.

--- a/.ci-local/deploy-ssh.conf
+++ b/.ci-local/deploy-ssh.conf
@@ -1,6 +1,7 @@
-au.org.libraryforall.launcher.app
-
 #
 # Each line of this file that does not begin with '#' is the name of a project of which to
 # upload APK files over ssh.
 #
+au.org.libraryforall.launcher.app
+au.org.libraryforall.launcher.inclusiv
+au.org.libraryforall.launcher.inclusiv_teacher
