Add POM_LICENCE_DIST back

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,6 +6,7 @@ POM_DEVELOPER_NAME=Mark Raynsford
 POM_DEVELOPER_EMAIL=code@io7m.com
 POM_DEVELOPER_URL=https://www.io7m.com
 POM_INCEPTION_YEAR=2019
+POM_LICENCE_DIST=repo
 POM_LICENCE_NAME=ISC License
 POM_LICENCE_URL=https://opensource.org/licenses/ISC
 POM_NAME=au.org.libraryforall
