Add Ukraine version

--- a/.ci-local/deploy-ssh.conf
+++ b/.ci-local/deploy-ssh.conf
@@ -5,3 +5,4 @@
 au.org.libraryforall.launcher.app
 au.org.libraryforall.launcher.inclusiv
 au.org.libraryforall.launcher.inclusiv_teacher
+au.org.libraryforall.launcher.ukraine
