--- a/settings.gradle
+++ b/settings.gradle
@@ -4,3 +4,4 @@ include ':au.org.libraryforall.launcher.inclusiv_teacher'
 include ':au.org.libraryforall.launcher.installed'
 include ':au.org.libraryforall.launcher.installed.api'
 include ':au.org.libraryforall.launcher.main'
+include ':au.org.libraryforall.launcher.ukraine'
